# notes_taking

./: README.md
backend/: .env  Cargo.toml  Dockerfile  todo.md
backend/migrations/: 20260306051211_create_users_and_notes.sql
backend/src/: auth.rs  handlers.rs  main.rs  models.rs  repo.rs  response.rs  routes.rs  utils.rs
backend/src/handlers/: auth.rs  note.rs  notebook.rs  user.rs  users.rs
backend/src/models/: auth.rs  note.rs  notebook.rs
backend/src/repo/: note_repo.rs  notebook_repo.rs  user_repo.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/backend/: todo.md
frontend/src/: App.vue  main.ts  types.ts
frontend/src/assets/: main.css
frontend/src/components/: AccountDropdown.vue  CreateCard.vue  DesktopSidebar.vue  EditorNavbar.vue  EditorPanel.vue  EditorView.vue  LoginCard.vue  MobileDrawer.vue  ModeSwitcher.vue  NoteItem.vue  NotebookContainer.vue  NotesFooter.vue  NotesHeader.vue  ProfileAvatar.vue  SearchBar.vue  SidebarNav.vue  TabButton.vue  olddesktopsidebar.vue
frontend/src/data/: fileData.ts
frontend/src/router/: index.ts
frontend/src/services/: api.ts  authService.ts  noteService.ts  notebookService.ts
frontend/src/stores/: authStore.ts  notesStore.ts
frontend/src/views/: CreateView.vue  EditorView.vue  LoginView.vue  RegisterView.vue  accountSettingsView.vue
